--- a/ccy.ini
+++ b/ccy.ini
@@ -9,6 +9,9 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,play.googleapis.com
+ruleset=🚀 全球直连,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=🚀 全球直连,[]DOMAIN-SUFFIX,connectivitycheck.gstatic.com
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
