--- a/ccy.ini
+++ b/ccy.ini
@@ -1,26 +1,31 @@
 [custom]
 ;不要随意改变关键字，否则会导致出错
-;多模式负载均衡
+;acl4SSR规则-在线版
 
 ;去广告：支持
 ;自动测速：支持
-;微软分流：支持
+;微软分流：不支持
+;苹果分流：不支持
 ;增强中国IP段：不支持
+;增强国外GFW：不支持
+
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🛑 全球拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/GoogleCN.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=Ⓜ️ 微软服务,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/GoogleCN.list
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+;ruleset=🎯 全球直连,[]GEOIP,LAN
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
