--- a/ccy.ini
+++ b/ccy.ini
@@ -9,21 +9,26 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+
 ruleset=🛑 全球拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🛑 全球拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=Ⓜ️ 微软服务,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-;ruleset=🎯 全球直连,[]GEOIP,LAN
-ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/GoogleCN.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
+ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=Ⓜ️ 微软服务,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT`.*
