--- a/ccy.ini
+++ b/ccy.ini
@@ -36,7 +36,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]`.*
+custom_proxy_group=🎥 Netflix`select`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`.*
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`.*
