--- a/ccy.ini
+++ b/ccy.ini
@@ -27,7 +27,7 @@ ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
-ruleset=🎥 Netflix,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=Ⓜ️ 微软服务,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🐟 漏网之鱼,[]FINAL
 
@@ -36,10 +36,12 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`.*`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`.*
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`.*
+
+
 
 enable_rule_generator=true
 overwrite_original_rules=true
