--- a/ccy.ini
+++ b/ccy.ini
@@ -4,12 +4,12 @@
 ;设置规则标志位
 ruleset=🛑 全球拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🛑 全球拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/UnBan.list
-ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=⛔️ 不走代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=📲 电报信息,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Telegram.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Apple.list
@@ -18,21 +18,21 @@ ruleset=🌍 国外媒体,https://raw.githubusercontent.com/WukongMaster/demo/ma
 ruleset=🤖 OpenAI,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/OpenAi.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/YouTube.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Google.list
-ruleset=⛔️ 不走代理,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=🤖 OpenAI`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=🤖 OpenAI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
+custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=⛔️ 不走代理`select`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
