--- a/ccy.ini
+++ b/ccy.ini
@@ -15,14 +15,14 @@ ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=📲 电报信息,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Telegram.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Apple.list
-ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Netflix.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/ProxyMedia.list
-ruleset=🤖 OpenAI,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/OpenAi.list
-ruleset=📢 谷歌服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/YouTube.list
-ruleset=📢 谷歌服务,https://raw.githubusercontent.com/WukongMaster/demo/main/Ruleset/Google.list
+ruleset=📲 电报信息,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/Telegram.list
+ruleset=Ⓜ️ 微软服务,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/Microsoft.list
+ruleset=🍎 苹果服务,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/Apple.list
+ruleset=🎥 奈飞视频,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/Netflix.list
+ruleset=🌍 国外媒体,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/ProxyMedia.list
+ruleset=🤖 OpenAI,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/OpenAi.list
+ruleset=📢 谷歌服务,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/YouTube.list
+ruleset=📢 谷歌服务,https://raw.gitmirror.com/WukongMaster/demo/main/Ruleset/Google.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
