--- a/ccy.ini
+++ b/ccy.ini
@@ -2,7 +2,10 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则-在线版
 
-
+ruleset=🛑 广告拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🛑 广告拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🛑 广告拦截,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/GoogleCN.list
@@ -24,6 +27,7 @@ custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/gene
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`.*
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🎯 全球直连`[]🚀 节点选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`.*
 
 enable_rule_generator=true
