--- a/ccy.ini
+++ b/ccy.ini
@@ -27,7 +27,7 @@ custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`.*
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🎯 全球直连`[]🚀 节点选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`.*
 
