--- a/ccy.ini
+++ b/ccy.ini
@@ -2,7 +2,7 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则-在线版
 
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/zhilian.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ccaicjoy/demo/main/zhilian.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
