--- a/ccy.ini
+++ b/ccy.ini
@@ -10,7 +10,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
-ruleset=Ⓜ️ 微软服务,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=👽 AI服务,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
 ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🐟 漏网之鱼,[]FINAL
 
@@ -20,7 +20,7 @@ custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
+custom_proxy_group=👽 AI服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`.*
 
 enable_rule_generator=true
