--- a/ccy.ini
+++ b/ccy.ini
@@ -10,7 +10,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
-ruleset=👽 AI服务,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
+ruleset=👽 AI服务,https://raw.gitmirror.com/ccaicjoy/demo/refs/heads/main/AI.list
 ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🐟 漏网之鱼,[]FINAL
 
