--- a/ccy.ini
+++ b/ccy.ini
@@ -7,7 +7,7 @@ ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
-ruleset=🚀 节点选择,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
 ruleset=👽 AI服务,https://raw.githubusercontent.com/ccaicjoy/demo/refs/heads/main/AI.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -19,6 +19,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`.*
 custom_proxy_group=👽 AI服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
