--- a/ccy.ini
+++ b/ccy.ini
@@ -2,16 +2,16 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则-在线版
 
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ccaicjoy/demo/main/zhilian.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ccaicjoy/demo/main/zhilian.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🚀 节点选择,https://raw.gitmirror.com/ccaicjoy/demo/main/ProxyLite.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ccaicjoy/demo/main/ProxyLite.list
 ruleset=👽 AI服务,https://raw.githubusercontent.com/ccaicjoy/demo/refs/heads/main/AI.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🎥 奈飞视频,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT`.*
